--- a/WIP/index.html
+++ b/WIP/index.html
@@ -4,8 +4,7 @@
 <title>Page Title</title>
 </head>
 <body>
-
-<h1>Test</h1>
+<h1>Hello World</h1>
 <p>This is my first time using HTML.</p>
 
 </body>
