--- a/WIP/index.html
+++ b/WIP/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Page Title</title>
-<link href="test.css" rel="stylesheet" type="text/css">
+<link href="test.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <h1>Hello World</h1>
