--- a/WIP/index.html
+++ b/WIP/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-<link href="test.css" rel="stylesheet" type="text/css"/>
+  <title>Page Title</title>
+  <link rel="stylesheet" href="test.css" type="text/css"/>
 </head>
 <body>
+  
 <h1>Hello World</h1>
 <p>This is my first time using HTML.</p>
 
