--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+  <title>Page Title</title>
+  <link rel="stylesheet" href="test.css" type="text/css"/>
 </head>
 <body>
+
 <h1>Hello World</h1>
 <p>This is my first time using HTML.</p>
 
