--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="has-children">
                   <a href="single.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Nature</a></li>
+                    <li><a href="#">oop</a></li>
                     <li><a href="#">Portrait</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Architecture</a></li>
