Made big changes to site

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
   <head>
-    <title>Photon &mdash; Colorlib Website Template</title>
+    <title>Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -50,7 +49,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Photon</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0"></a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -60,24 +59,21 @@
                 <li class="has-children">
                   <a href="single.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Nature</a></li>
-                    <li><a href="#">Portrait</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Architecture</a></li>
-                    <li><a href="#">Animals</a></li>
-                    <li><a href="#">Sports</a></li>
-                    <li><a href="#">Travel</a></li>
+                    <li><a href="portraits.html">Portraits</a></li>
+                    <li><a href="landscape.html">Landscape</a></li>
+                    <li><a href="graduations.html">Graduations</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="edits.html">Edits</a></li>
                     <li class="has-children">
-                      <a href="#">Sub Menu</a>
+                      <!-- <a href="#">Sub Menu</a> -->
                       <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
+                        <!-- <li><a href="#">Menu One</a></li>
                         <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
+                        <li><a href="#">Menu Three</a></li> -->
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -88,16 +84,7 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                </li>
-                <li>
                   <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
                 </li>
               </ul>
             </div>
@@ -119,64 +106,46 @@
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Nature</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">portraits</h2>
+                  <a href="portraits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_1.jpg" alt="Image">
+                <img src="images/portraits/DSC_0765.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Portrait</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">landscape</h2>
+                  <a href="landscape.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_2.jpg" alt="Image">
+                <img src="images/landscape/DSC_0001.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">People</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">graduations</h2>
+                  <a href="graduations.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_3.jpg" alt="Image">
+                <img src="images/graduations/img_2.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Architecture</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">events</h2>
+                  <a href="events.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_4.jpg" alt="Image">
+                <img src="images/events/DSC_0256.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Animals</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">edits</h2>
+                  <a href="edits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_5.jpg" alt="Image">
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="image-wrap">
-                <div class="image-info">
-                  <h2 class="mb-3">Sports</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-                </div>
-                <img src="images/img_6.jpg" alt="Image">
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="image-wrap">
-                <div class="image-info">
-                  <h2 class="mb-3">Travel</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-                </div>
-                <img src="images/img_7.jpg" alt="Image">
+                <img src="images/edits/DSC_0437.jpg" alt="Image">
               </div>
             </div>
         </div>
@@ -230,17 +199,4 @@
   </script>
 
   </body>
-=======
-<html>
-<head>
-  <title>Page Title</title>
-  <link rel="stylesheet" href="test.css" type="text/css"/>
-</head>
-<body>
-
-<h1>Hello World</h1>
-<p>My name is Marlon and this is my first time using HTML! :D</p>
-
-</body>
->>>>>>> parent of a24b661... Uploading theme
 </html>
