--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Titulooo</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">About</a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -105,7 +105,7 @@
 
       <div class="row justify-content-center">
         <div class="col-md-7">
-          <div class="row mb-5 site-section">
+          <div class="row mb-3 site-section">
             <div class="col-12 ">
               <h2 class="site-section-heading text-center">About Me</h2>
             </div>
@@ -116,7 +116,16 @@
               <img src="images/portraits/DSC_0308.jpg" alt="Images" class="img-fluid">
             </div>
             <div class="col-md-4 ml-auto">
-              <p>Hi there! My name is Marlon! This is my first time configuring HTML! :D</p>
+              <p>Hi there! My name is Marlon! I started my journey into photography back in 2015 when I first purchased a Nikon D3100. Since then, I have amassed over thousands of pictures.
+              This portfolio showcases some of my favorites :)</p>
+            </div>
+          </div>
+          <div class="row mb-5">
+            <div class="col-md-7">
+              <img src="images/portraits/DSC_0362.jpg" alt="Images" class="img-fluid">
+            </div>
+            <div class="col-md-4 ml-auto">
+              <p>Feel free to contact me for more information! :)</p>
             </div>
           </div>
         </div>
