--- a/graduations.html
+++ b/graduations.html
@@ -116,9 +116,129 @@
 
       </div>
       <div class="row" id="lightgallery">
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/img_2.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-          <a href="#"><img src="images/graduations/img_2.jpg" alt="IMage" class="img-fluid"></a>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0122.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0122.jpg" alt="IMage" class="img-fluid"></a>
         </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0139.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0139.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0141.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0141.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0151.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0151.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0226.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0226.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0228.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0228.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0248.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0248.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0276.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0276.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0285.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0285.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0344.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0344.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0354.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0354.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0363.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0363.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0565.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0565.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0569.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0569.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0796.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0796.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0813-1.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0813-1.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0817.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0817.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0013.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0013.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0022-Edit.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0022-Edit.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0023.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0023.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0548L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0548L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0245L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0245L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0642L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0642L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0184L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0184L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0190L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0190L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0220L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0220L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_4566L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_4566L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0084L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0084L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0099L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0099L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0826L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/graduations/DSC_0826L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+
+
       </div>
     </div>
   </div>
