--- a/portraits.html
+++ b/portraits.html
@@ -120,6 +120,114 @@
           <a href="#"><img src="images/portraits/DSC_0765.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0209.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0209.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0223.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0223.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_02301.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_02301.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0241.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0241.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0249.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0249.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0250.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0250.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0253.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0253.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0279.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0279.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0281.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0281.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0283.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0283.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0308.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0308.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0319.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0319.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0335.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0335.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0346.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0346.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0362.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0362.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0673.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0673.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0675.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0675.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0701.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0701.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0723.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0723.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0728.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0728.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0763.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0763.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0764.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0764.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0765.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0765.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0780.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0780.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0289L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0289L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0417L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0417L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0347L.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/portraits/DSC_0347L.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+
 
       </div>
     </div>
