--- a/landscape.html
+++ b/landscape.html
@@ -120,6 +120,51 @@
           <a href="#"><img src="images/landscape/DSC_0001.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0001.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0001.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0058.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0058.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0071.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0071.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0123.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0123.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0163.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0163.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0164-2.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0164-2.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0235.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0235.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0275-2.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0275-2.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0464.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0464.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0762.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/DSC_0762.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/IMG4.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/landscape/IMG4.jpg" alt="IMage" class="img-fluid"></a>
+        </div>
+
+
       </div>
     </div>
   </div>
