--- a/events.html
+++ b/events.html
@@ -116,79 +116,74 @@
 
       </div>
       <div class="row" id="lightgallery">
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0256-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-          <a href="#"><img src="images/events/DSC_0256-E-E.jpg" alt="IMage" class="img-fluid"></a>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0256-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0256-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/CORE-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/CORE-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0312-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0312-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Design-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Design-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0454-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0454-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0256-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0256-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0568-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0568-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0312-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0312-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0600-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0600-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0454-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0454-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0601-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0601-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0568-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0568-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0603-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0603-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0600-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0600-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/CORE-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/CORE-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0601-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0601-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Performance-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/Performance-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0603-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0603-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Production-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/Production-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Performance-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Performance-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Public Relations-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/Public Relations-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Production-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Production-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Story-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/Story-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Public Relations-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Public Relations-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Tech-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/Tech-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Story-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Story-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Design-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/Design-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Tech-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Tech-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0307L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0307L-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0307L-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0307L-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0313L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0313L-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0313L-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0313L-E-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0667L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
+          <a href="#"><img src="images/events/DSC_0667L-E.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0667L-E-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0667L-E-E.jpg" alt="IMage" class="img-fluid"></a>
-        </div>
-
-
 
       </div>
     </div>
