--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
                   <h2 class="mb-3">graduations</h2>
                   <a href="graduations.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/graduations/DSC_4566L-E.jpg" alt="Image">
+                <img src="images/graduations/DSC_0084L-E.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">events</h2>
-                  <a href="events.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3 text-dark">events</h2>
+                  <a href="events.html" class="btn btn-outline-dark py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/events/DSC_0256-E.jpg" alt="Image">
               </div>
